feat: implement tool workflow capabilities